# dotbee

./: .gitlab-ci.yml  .taplo.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  README.md  ROADMAP.md  TODO.md  lefthook.yml  mise.toml  rust-toolchain.toml
.gitlab-ci/: build.yml  release.yml  validation.yml
.mise-tasks/: bump-version  gen-changelog  try-dotbee  try-dotsy  validate-ci
crates/config/: Cargo.toml
crates/context/: Cargo.toml
crates/context/src/: lib.rs  message.rs
crates/state/: Cargo.toml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
example/: dotsy.toml
example/profiles/global/fish/: config.fish  fish_variables
example/profiles/global/fish/conf.d/: _mise.fish  (+2 more)
example/profiles/global/git/: config
example/profiles/global/nvim/: .emmyrc.json  init.lua  stylua.toml
example/profiles/laptop/kitty/: kitty.conf
mise-tasks/: build-container.sh  run-container.sh
schema/: dotbee.json  dotsy.json
src/: cli.rs  context.rs  lib.rs  main.rs  message.rs  state.rs  util.rs  utils.rs
src/commands/: doctor.rs  init.rs  list.rs  mod.rs  purge.rs  repair.rs  switch.rs
src/config/: dotsy.toml  hooks.rs  icons.rs  mod.rs
src/context/: message.rs  mod.rs
src/context/manager/: mod.rs  symlink.rs
src/context/manager/config/: conflict.rs  dotbee.toml  mod.rs
src/context/manager/state/: mod.rs
src/state/: mod.rs
src/subcommands/: completion.rs  doctor.rs  init.rs  list.rs  mod.rs  purge.rs  repair.rs  switch.rs
src/utils/: common.rs  message.rs
test/: utils.rs
tests/: manager.rs  utils.rs
(+33 files in other folders)
