[package]
name = "dotbee"
version = "0.6.0"
authors = ["Rogue.Sly <rogue87@tuta.io>"]
description = "Dotfiles manager designed for ease of use"
edition = "2024"
repository = "https://gitlab.com/rogue-sly/dotbee"
keywords = ["dotbee", "dotfiles"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.95.0"
exclude = [".gitlab-ci.yml", ".gitlab-ci/*", ".mise-tasks/*", "mise.toml"]

[package.metadata.deb]
maintainer = "Rogue.Sly <rogue87@tuta.io>"
copyright = "2026, Rogue.Sly <rogue87@tuta.io>"
license-file = ["LICENSE", "4"]
assets = [["target/release/dotbee", "usr/bin/", "755"]]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/dotbee", dest = "/usr/bin/dotbee", mode = "755" }
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "3.0"
demand = "1.7"
dirs = "6.0"
indexmap = { version = "2.2", features = ["serde"] }
nix = { version = "0.31", features = ["hostname"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.9", features = ["parse"] }
